<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.app.automation</groupId>
	<artifactId>browserStackIntegration</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>browserStackIntegration</name>
	<url>http://maven.apache.org</url>
	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					 <compilerArgs>
                      <arg>--add-exports</arg>
                      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                  </compilerArgs>
					<systemPropertyVariables>
						<property>
							<invokeDriver>${invokeDriver}</invokeDriver>
						</property>
					</systemPropertyVariables>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium.version>4.11.0</selenium.version>
		<cucumber.version>7.1.0</cucumber.version>
		<extentreports.version>1.9.1</extentreports.version>
		<log4j.version>1.2.14</log4j.version>
		<webdrivermanager.version>5.5.3</webdrivermanager.version>
		<gherkin.version>20.0.0</gherkin.version>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.browserstack</groupId>
			<artifactId>browserstack-java-sdk</artifactId>
			<version>LATEST</version>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.8</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
